@@ -2,4 +2,6 @@ Makefile
 Makefile.old
 pm_to_blib
 blib
+Tie-IxHash-FixedSize*
+.build/
 *.bak
