@@ -1,8 +1,0 @@
-Changes
-lib/Tie/IxHash/FixedSize.pm
-Makefile.PL
-MANIFEST
-MANIFEST.SKIP
-README
-t/basic.t
-t/signature.t
