@@ -1,0 +1,7 @@
+name    = Tie-IxHash-FixedSize
+author  = Michael Schout <mschout@cpan.org>
+license = Perl_5
+copyright_holder = Michael Schout
+
+[@MSCHOUT]
+use_twitter = 1
