@@ -1,5 +1,10 @@
 Revision history for Tie::IxHash::FixedSize.
 
+{{$NEXT}}
+    - Use Dist::Zilla to build the dist.
+    - Use parent.pm rather than base.pm
+    - Make signature test an AUTHOR test
+
 1.01  Fri Nov 13 2009
     - disable signature test unless TEST_SIGNATURE is enabled, otherwise test
       fails if keyserver is unreachable.
